swagger listContacts, addContact, getContactById
