# controllers/contacts/addContact.js
@@ -1,14 +1,17 @@
 const { Contact } = require('../../models')
 
 const addContact = async (req, res, next) => {
-  const body = req.body
+  const { name, phone } = req.body
   const { _id: userId } = req.user
-  const newContact =
-    body.favorite === undefined
-      ? { ...body, owner: userId, favorite: false }
-      : body
+
+  const newContact = { owner: userId, name, phone }
   const contact = await Contact.create(newContact)
-  res.status(201).json(contact)
+
+  res.status(201).json({
+    status: 'success',
+    code: 201,
+    contact,
+  })
 }
 
 module.exports = addContact
